# ouroboros

./: .gitignore  Cargo.toml  README.md  rustc-ice-2025-10-07T20_53_20-34664.txt  test.rs
.sqlx/: query-0e8253acd958ef4d198afcf6debe6dd916209521f8e914c3d62c3cd1d5727b9a.json  query-17dbb50d48de29f7566240c2adf93c327d748091b1bc4fce5e3500aa99c78efb.json  query-17ea8a5f1f82d2141cf15120c79e48493f89f22269fdb05fbf94124bfad91cd8.json  query-1f9b379507b9dded08be1c1b94084802358344e7c47825b1875db4c7491cde09.json  query-207498a457fa1d6a751c981d0b18ee63584d9ffc22a54938a456219a52f850a9.json  query-2583cf0cf1b742a0c708ee4d7b1978a177a00feebf44e9dc08b1d460a34cba01.json  query-2d501bd433e64d9b5099a60c9b28d493abff7deda52fd51770dbde809969dc28.json  query-2ec80e5736df9006bfbf7c506fdbf44e4c1a64a5253c677d97e088a35c36aca2.json  query-2f394ca036845dcb8904ab2a11ebf66a18f321970e7dd1553d1d3afde619ae6a.json  query-2f3c5a4a54af16aa29accd0c8afce07a1f315da360bf76e5601e951129549b7e.json  query-3d6d6ec8cab3dda1e00667d1f624306ec4d7af23d19a94da9d20f8fee70b2794.json  query-3da8c13b7685d5357e763f837f5cd39387b8dc786a7126722bf4ff08d6d452d0.json  query-54d6dcf540fa1868d699bf6f6de20bed9d6569ba04f878e9e841ff411bf0ec78.json  query-61dde721843ab2dc717531f8686e21983e993d854c3677a737234d20cfd65c9d.json  query-6a2fbce0c24c76a34a43bd4130572000ade80b7239865a3c63708539949cd0fd.json  query-6cee7f4f595c6e2ed096aeabe25a271fc35f44e634b98de8168cfd7190e3f68e.json  query-6d4895d9c1a00f5f3877d2eb4e5a3d4938f5cda1d8175c37090d162617be83a1.json  query-7568b86107ef4b27070fdff5e74c7943cb83ea7159ef9a11e28fd83abf4aa896.json  (+29 more)
src/: main.rs  (+7 more)
(+106 files in other folders)
