[package]
name = "Ouroboros"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serenity = "0.12.4"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ouroboros_macros = { path = "./ouroboros_macros" }
sqlx = { version = "0.8.6", features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "tls-native-tls"] }
chrono = "0.4.41"
nanoid = "0.4.0"

[workspace]
members = ["ouroboros_macros"]
